tests/NormalTests/paczka1/small_fuzzy/90429338.err
Error in line 2: HxWMCwSrG S615 62,8
Error in line 12: 62Ltg0Ei S245 98,2
